opam-version: "1.2"
name: "funarith"
version: "dev"
authors: ["Simon Cruanes" "Guillaume Bury"]
maintainer: "simon.cruanes.2007@m4x.org"
license: "MIT"
build: [
  [make "build"]
]
install: [
  ["jbuilder" "install"]
]
build-test: [
  [make "test"]
]
build-doc: [
  [make "doc"]
]
remove: [
    ["ocamlfind" "remove" "funarith"]
]
depends: [
  "containers" { >= "1.0" }
  "sequence" { >= "0.6" }
  "ocamlfind"
  "ounit" { test }
  "qcheck" { test }
  "jbuilder" { build }
]
depopts: [
  "zarith"
]
tags: [ "arithmetic" ]
homepage: "https://github.com/c-cube/funarith/"
bug-reports: "https://github.com/c-cube/funarith/issues"
dev-repo: "https://github.com/c-cube/funarith.git"

