opam-version: "2.0"
name: "funarith"
version: "dev"
authors: ["Simon Cruanes" "Guillaume Bury"]
maintainer: "simon.cruanes.2007@m4x.org"
synopsis: "Collection of arithmetic algorithms and decision procedures"
license: "MIT"
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
depends: [
  "containers" { >= "2.8" & < "4.0"  }
  "iter" { >= "1.0" }
  "dune"
  "ounit2" { with-test }
  "qcheck" { with-test & >= "0.15" }
  "zarith" { with-test }
]
depopts: [
  "zarith"
]
tags: [ "arithmetic" ]
homepage: "https://github.com/c-cube/funarith/"
bug-reports: "https://github.com/c-cube/funarith/issues"
dev-repo: "git+https://github.com/c-cube/funarith.git"

